# reckie

./: .dockerignore  .env.example  .gitignore  02_git_setup.md  AUTOMATION.md  CLAUDE.md  DEVELOPMENT_NOTES.md  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js  test_jq.md
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  feature.yml  user_story.yml
.github/workflows/: ci.yml  issue-management.yml  quality.yml
app/: config.py  main.py
app/routes/: chat.py  main.py
app/services/: __init__.py  conversation_service.py  github_service.py  openai_service.py  webhook_service.py
app/static/css/: input.css  style.css
app/static/js/: main.js
app/templates/: ai-analysis.html  analytics.html  base.html  exports.html  index.html  profile.html  projects.html  requirements.html  settings.html  smart-generation.html  validation.html
app/templates/chat/: basic_chat.html  test_chat.html
docker/: Dockerfile  docker-compose.yml
docker/postgres/: init.sql
docs/: 01_init_git_and_wiki.md  03_manual_kanban_setup.md  04_development_setup.md  05_walking_skeleton.md  development.md  vision.md
docs/wiki/: Epic-User-LLM-Interaction-Framework.md  Essential-Use-Cases-LLM-Interaction.md  UI-Mockups-LLM-Interaction.md
scripts/: README.md  commit-and-push.sh  common.sh  deploy.sh  dev.sh  lint.sh  setup-wiki.sh  setup.sh  test.sh
tests/: conftest.py
tests/e2e/: test_hello_world.py
tests/integration/: test_api.py
tests/unit/: test_main.py
